--- a/Python/PyHack_dataframe_setup_SP.ipynb
+++ b/Python/PyHack_dataframe_setup_SP.ipynb
@@ -5645,7 +5645,7 @@
     }
    ],
    "source": [
-    "# Create Pivot Table (Aggregate Function = Sum) of Number of Each Method type Breach by Sector\n",
+    "# Create Pivot Table (Aggregate Function = Sum) of Total Number of Records Lost per Sector by Method\n",
     "dBreaches_method_pivot = cleaned_dBreaches_df.pivot_table('records lost',\n",
     "                                                          aggfunc=np.sum,\n",
     "                                                          columns='method',\n",
@@ -5656,7 +5656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -5670,7 +5670,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     },
