--- a/Python/sqlite_table_creation.ipynb
+++ b/Python/sqlite_table_creation.ipynb
@@ -56,7 +56,8 @@
     "    country = Column(String(255))\t\n",
     "    latitude = Column(Float)\t\n",
     "    longitude = Column(Float)\t\n",
-    "    coordinates = Column(String(255))\t"
+    "    coordinates = Column(String(255))\n",
+    "    date = Column(String(255))\t"
    ]
   },
   {
