--- a/Python/sqlite_table_creation.ipynb
+++ b/Python/sqlite_table_creation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,18 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create Engine to data_breaches.sqlite\n",
-    "engine = create_engine(\"sqlite:///../Resources/data_breaches.sqlite\")\n",
+    "engine = create_engine(\"sqlite:///../Resources/data_breaches2.sqlite\")\n",
     "conn = engine.connect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,6 +51,7 @@
     "    sector = Column(String(255))\n",
     "    method = Column(String(255))\n",
     "    data_sensitivity = Column(Integer)\n",
+    "    story = Column(String)\n",
     "    source_name\t= Column(String(255))\t\n",
     "    city = Column(String(255))\t\n",
     "    country = Column(String(255))\t\n",
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
