--- a/Python/sqlite_table_creation.ipynb
+++ b/Python/sqlite_table_creation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,6 +51,7 @@
     "    sector = Column(String(255))\n",
     "    method = Column(String(255))\n",
     "    data_sensitivity = Column(Integer)\n",
+    "    dSens_desc = Column(String)\n",
     "    story = Column(String)\n",
     "    source_name\t= Column(String(255))\t\n",
     "    city = Column(String(255))\t\n",
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
